Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18886

ZFS 2.30 sanity scrub failures

XMLWordPrintable

    • 3
    • 9223372036854775807

      Something has changed in ZFS 2.30 that causes several sanity scrub test to fail. No kernel crashes but actual failures to rebuild files. See for example

      https://testing.whamcloud.com/gerrit-janitor/rocky8/77/results.html

            behlendorf Brian Behlendorf
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: